llvm/src/snapshots/transmute_llvm__tests__while_no_ret_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define i1 @_TM0_1f1n(i64 %"n#param#sym20#") gc "shadow-stack" {
entry:
  br label %cond

cond:                                             ; preds = %body, %entry
  %"lt#" = icmp slt i64 %"n#param#sym20#", 42
  br i1 %"lt#", label %body, label %end_while

body:                                             ; preds = %cond
  %"add#" = add i64 %"n#param#sym20#", 1
  br label %cond

end_while:                                        ; preds = %cond
  ret i1 true
}

attributes #0 = { nounwind }
