llvm/src/snapshots/transmute_llvm__tests__while_ret_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1n(i64 %"n#param#sym20#") gc "shadow-stack" {
entry:
  br label %cond

cond:                                             ; preds = %entry
  %"ne#" = icmp ne i64 %"n#param#sym20#", 42
  br i1 %"ne#", label %body, label %end_while

body:                                             ; preds = %cond
  ret i64 %"n#param#sym20#"

end_while:                                        ; preds = %cond
  unreachable
}

attributes #0 = { nounwind }
