llvm/src/snapshots/transmute_llvm__tests__while_simple.snap
---
source: llvm/src/lib.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define void @f(i64 %"n#sym19#") {
entry:
  %"n#local#sym19#" = alloca i64, align 8
  store i64 %"n#sym19#", ptr %"n#local#sym19#", align 4
  br label %cond

cond:                                             ; preds = %body, %entry
  br i1 true, label %body, label %end_while

body:                                             ; preds = %cond
  br label %cond

end_while:                                        ; preds = %cond
  ret void
}
